1.5.1 align whole pile reminders
